@@ -1,8 +1,11 @@
 package org.example;
 
+import org.example.elementsQuery.*;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
@@ -16,90 +19,96 @@ public class DatabaseQueryService {
         this.database = database;
     }
 
-    public void printNameClient() {
-        try (Statement st = database.getConnection().createStatement()) {
-            try (ResultSet rs = st.executeQuery("SELECT name  FROM client")) {
-                while (rs.next()) {
-                    String name = rs.getString("name");
-                    System.out.println("name client = " + name);
-                }
-            }
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
-        }
-    }
+    public List<MaxSalaryWorker> findMaxSalaryWorker() {
+        List<MaxSalaryWorker> result = new ArrayList<>();
 
-    public void find_longest_project() {
-        try (Statement st = database.getConnection().createStatement()) {
-            String sql = "SELECT c.name,\n" +
-                    "    DATEDIFF('MONTH', p.START_DATE, p.FINISH_DATE) AS month_count\n" +
-                    "    FROM client c\n" +
-                    "    JOIN project p ON p.client_id = c.id\n" +
-                    "    WHERE DATEDIFF('MONTH', p.START_DATE, p.FINISH_DATE) = (\n" +
-                    "    SELECT MAX(project_duration)\n" +
-                    "    FROM (SELECT DATEDIFF('MONTH', START_DATE, FINISH_DATE)\n" +
-                    "    AS project_duration FROM project) AS project_duration)";
-            try (ResultSet rs = st.executeQuery(sql)) {
-                while (rs.next()) {
-                    String name = rs.getString(1);
-                    int months = rs.getInt(2);
-                    System.out.println(name + ": " + months);
+        try {
+            String sql = Files.readString(Path.of("./sql/find_max_salary_worker.sql"));
+
+            try (Statement statement = database.getConnection().createStatement();
+                 ResultSet resultSet = statement.executeQuery(sql)) {
+
+                while (resultSet.next()) {
+                    String name = resultSet.getString("name");
+                    int salary = resultSet.getInt("salary");
+
+                    MaxSalaryWorker worker = new MaxSalaryWorker(name, salary);
+
+                    result.add(worker);
                 }
             } catch (SQLException e) {
                 e.printStackTrace();
             }
-        } catch (SQLException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
 
-
+        return result;
     }
 
-    public void find_max_projects_client() {
-        try (Statement st = database.getConnection().createStatement()) {
-            String sql = "SELECT c.name, COUNT(p.client_id) AS projects_client FROM client c \n" +
-                    "JOIN project p ON p.client_id = c.id\n" +
-                    "GROUP BY client_id\n" +
-                    "HAVING projects_client = (\n" +
-                    "SELECT MAX(proj) FROM (\n" +
-                    "SELECT COUNT(client_id) AS proj\n" +
-                    "FROM project\n" +
-                    "GROUP BY client_id))";
+    public List<MaxProjectCountClient> findMaxProjectsClient() {
+        List<MaxProjectCountClient> result = new ArrayList<>();
 
-            try (ResultSet rs = st.executeQuery(sql)) {
-                while (rs.next()) {
-                    String clientName = rs.getString("name");
-                    int projectCount = rs.getInt("projects_client");
-                    System.out.println("Client: " + clientName + " has the most projects with " + projectCount + " projects.");
+        try {
+
+            String sql = Files.readString(Path.of("./sql/find_max_projects_client.sql"));
+
+            try (Statement statement = database.getConnection().createStatement();
+                 ResultSet resultSet = statement.executeQuery(sql)) {
+
+                while (resultSet.next()) {
+                    String name = resultSet.getString("name");
+                    int projectCount = resultSet.getInt("projects_client");
+
+                    MaxProjectCountClient client = new MaxProjectCountClient(name, projectCount);
+
+                    result.add(client);
                 }
             } catch (SQLException e) {
                 e.printStackTrace();
             }
-        } catch (SQLException e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
+               return result;
     }
 
-    public void find_max_salary_worker() {
+    public List<LongestProject> findLongestProject() {
+        List<LongestProject> result = new ArrayList<>();
+
+        try {
+            String sql = Files.readString(Path.of("./sql/find_longest_project.sql"));
 
 
-        try (Statement st = database.getConnection().createStatement()) {
-            try (ResultSet rs = st.executeQuery("SELECT name, salary FROM worker\n" +
-                    "WHERE salary = (SELECT MAX(salary) FROM worker);")) {
-                while (rs.next()) {
-                    System.out.println("Name: " + rs.getString("name") + " salary: " + rs.getInt("salary"));
+            try (Statement statement = database.getConnection().createStatement();
+                 ResultSet resultSet = statement.executeQuery(sql)) {
+
+                while (resultSet.next()) {
+                    String name = resultSet.getString("name");
+                    int monthCount = resultSet.getInt("month_count");
+
+                    LongestProject project = new LongestProject(name, monthCount);
+
+                    result.add(project);
                 }
+            } catch (SQLException e) {
+                e.printStackTrace();
             }
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
         }
+        return result;
     }
-
-    public <YoungestEldestWorkers> List<YoungestEldestWorkers>  findYoungestEldestWorkers() {
+//інший засіб ведення путі через джойни та використання константи
+    public List<YoungestEldestWorkers> findYoungestEldestWorkers() {
         List<YoungestEldestWorkers> result = new ArrayList<>();
 
         try {
-            String sql = Files.readString(Path.of(Prefs.SELECT_YOUNGEST_ELDEST));
+            String initDbFilename = new Prefs().getString(Prefs.SELECT_YOUNGEST_ELDEST);
+            String sql = String.join(
+                    "\n",
+                    Files.readAllLines(Paths.get(initDbFilename))
+            );
 
 
             try (Statement statement = database.getConnection().createStatement();
@@ -120,13 +129,45 @@ public class DatabaseQueryService {
         } catch (IOException e) {
             e.printStackTrace();
         }
-
+        String n = result.toString();
+        System.out.println(n);
         return result;
     }
+    //інший засіб ведення путі через джойни та використання константи
+    public List<PriceProject> printProjectPrices() {
+        List<PriceProject> result = new ArrayList<>();
+
+        try {
+            String initDbFilename = new Prefs().getString(Prefs.PRINT_PROJECT_PRICES);
+            String sql = String.join(
+                    "\n",
+                    Files.readAllLines(Paths.get(initDbFilename))
+            );
 
 
+            try (Statement statement = database.getConnection().createStatement();
+                 ResultSet resultSet = statement.executeQuery(sql)) {
+
+                while (resultSet.next()) {
+                    String name = resultSet.getString("name");
+                    int price = resultSet.getInt("price");
+
+                    PriceProject project = new PriceProject(name, price);
+
+                    result.add(project);
+                }
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        String n = result.toString();
+        System.out.println(n);
+        return result;
+
+    }
 }
-
 
 
 
